assignment 5 added beer style to query template
