# src/main/java/guru/springframework/juniemvc/controllers/BeerController.java
@@ -24,12 +24,13 @@ class BeerController {
     }
 
     /**
-     * Get beers with pagination and optional beanName filter.
+     * Get beers with pagination and optional beanName and beerStyle filters.
      */
     @GetMapping
     Page<BeerDto> getBeers(@RequestParam(value = "beanName", required = false) String beanName,
+                           @RequestParam(value = "beerStyle", required = false) String beerStyle,
                            Pageable pageable) {
-        return beerService.getBeers(beanName, pageable);
+        return beerService.getBeers(beanName, beerStyle, pageable);
     }
 
     /**
